# Pyrit-MCP

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  INSTRUCTIONS.MD  LICENSE  Makefile  README.md  ROADMAP.md  USER_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-push.yml  ci.yml  release.yml
config/: model_catalog.json  tier_profiles.json
docker/: Dockerfile  Dockerfile.dev  Dockerfile.scorer  entrypoint.sh  scorer_app.py  scorer_requirements.txt
evaluations/: eval_questions.xml
pyrit_mcp/: __init__.py  config.py  server.py
pyrit_mcp/tools/: __init__.py  backends.py  converters.py  datasets.py  orchestrators.py  results.py  scorers.py  targets.py
pyrit_mcp/utils/: __init__.py  db.py  formatters.py  rate_limiter.py  scoring.py  system_detect.py
scripts/: benchmark.sh  detect_system.sh  download_model.sh  recommend_models.sh  validate_env.sh
tests/: conftest.py  test_backends.py  test_converters.py  test_datasets.py  test_init.py  test_orchestrators.py  test_results.py  test_scorers.py  test_system_detect.py  test_targets.py
